# antigence-subnet

./: .build-summary.json  .env.example  .env.phase94.example  .gitignore  .gitleaksignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PUBLIC_RELEASE.md  README.md  SECURITY.md  antigence_subnet.toml.example  dev-requirements.txt  docker-compose.yml  min_compute.yml  osv-scanner.toml  pyproject.toml  requirements-lock.txt  requirements-test.txt  requirements.txt
.github/workflows/: ci.yml  security.yml
antigence_subnet/: __init__.py  mock.py  protocol.py  validate_config.py
antigence_subnet/api/: health.py  metrics.py  (+2 more)
docs/: ecosystem.md  getting-started.md  manuscript.md  miner-training-data.md  performance-tuning.md  publication-strategy.md  testnet-setup.md  troubleshooting.md  v13.x-report.md
neurons/: api_server.py  miner.py  validator.py
scripts/: benchmark_all_strategies.py  benchmark_detectors.py  benchmark_orchestrator.py  build_public_mirror.py  combine_baselines.py  feature_audit.py  generate_eval_data.py  generate_phase94_governance_artifacts.py  ollama_test_harness.py  phase81_nondeterminism.py  phase83_scoring_benchmark.py  phase84_swarm_spike.py  phase92_continuous_benchmark.py  phase94_collect_metrics.py  phase94_preflight.py  revert_1103.sh  run_api.sh  run_miner.sh  run_validator.sh  tune_orchestrator.py  validate_eval_data.py  validate_testnet.py
tests/: conftest.py  test_adaptive_weights.py  test_api_retry.py  test_autoencoder_parity.py  test_b_cell.py  test_baseline_integrity.py  test_benchmark_negsel.py  test_bio_pack.py  test_blacklist_priority.py  test_build_public_mirror.py  test_calibration.py  test_challenge.py  test_challenge_rotation.py  test_code_security_pack.py  test_cold_start.py  test_collusion.py  test_config_externalization.py  test_config_file.py  test_config_profiles.py  test_danger_modulator.py  test_data_expansion.py  test_dendritic_cell.py  test_detectors.py  test_domain_packs_integration.py  test_domain_routing.py  test_e2e_cycle.py  test_ensemble.py  test_eval_data_integrity.py  test_evaluation.py  test_evaluation_exclusion.py  test_feature_audit.py  test_feedback.py  test_forward_hardened.py  test_forward_integration.py  test_fractal_complexity.py  test_generate_eval_data.py  test_hallucination_pack.py  test_health_api.py  test_hotkey_rotation.py  test_immune_orchestrator.py  (+64 more)
(+156 files in other folders)
