[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antigence-subnet"
version = "10.1.0"
description = "Decentralized verification subnet for Bittensor -- immune-inspired anomaly detection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.15"
dependencies = [
    "bittensor==10.2.0",
    # Pin async-substrate-interface below 2.0: the 2.x line added a hard-fail
    # conflict check that rejects scalecodec (which bittensor 10.2.0 still
    # requires), causing `import bittensor` to raise at collection time.
    "async-substrate-interface>=1.6.2,<2.0",
    "numpy>=2.0.1,<3.0",
    "scikit-learn>=1.4.0,<2.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
api = ["fastapi>=0.110.1", "uvicorn>=0.29.0", "prometheus-client>=0.20.0"]
torch = ["torch>=2.0,<3.0"]
cli = ["bittensor-cli>=9.16.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
    "prometheus-client>=0.20.0",
    # Required by tests that patch `ollama.chat` / `ollama.list`. The client
    # is small (Python-only); without it `unittest.mock.patch("ollama.chat")`
    # fails at import time and CI silently skips the harness contract tests.
    "ollama>=0.6.0,<1.0",
]
sbert = ["sentence-transformers>=4.0,<6.0"]
fractal = ["nolds>=0.5"]

[project.urls]
Homepage = "https://github.com/biobitworks/antigence-subnet"
Repository = "https://github.com/biobitworks/antigence-subnet"
"Bug Tracker" = "https://github.com/biobitworks/antigence-subnet/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "ollama: tests requiring a live Ollama instance (skip with OLLAMA_SKIP=1)",
    "integration: tests requiring real network I/O on localhost",
    "testnet: tests requiring real Bittensor testnet infrastructure",
]

[tool.setuptools.packages.find]
include = ["antigence_subnet*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
